--- a/Django_Docker/toolkeeper_app/templates/base.html
+++ b/Django_Docker/toolkeeper_app/templates/base.html
@@ -88,7 +88,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
-        {% block js %}{% endblock %}
+        <span id="block_js">{% block js %}{% endblock %}</span>
 
     </body>
 </html>
