--- a/Django_Docker/toolkeeper_app/templates/common_history_create.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_create.html
@@ -1,7 +1,7 @@
 {% for item in items reversed %}
-<div class="row justify-content-around w-100 mt-4 mt-md-auto" id="ctrl_{{ forloop.counter0 }}">
+<div class="row justify-content-between mt-auto mx-auto" id="ctrl_{{ forloop.counter0 }}">
     {% include 'common_history_check_list.html' %}
-    <div class="my-check col-md-12 my-2 my-md-3">
+    <div class="my-check col-md-12 my-3 ps-md-0">
         <input class="btn-check" type="checkbox" id="box_{{ forloop.counter0 }}" name="box" disabled>
         <label class="btn my-btn-common my-check-red w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
     </div>
