--- a/Django_Docker/toolkeeper_app/templates/item_add.html
+++ b/Django_Docker/toolkeeper_app/templates/item_add.html
@@ -119,6 +119,7 @@
 
             text_form.setAttribute('name', `form-${num}-${nameset[i]}`);
             text_form.setAttribute('class', 'form-control');
+            text_form.setAttribute('maxlength', '16');
 
             if (i - 1 >= nameset.length) text_form.setAttribute('value', 'False');
             tag.appendChild(text_form);
