--- a/Django_Docker/toolkeeper_app/templates/asset_detail.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_detail.html
@@ -6,38 +6,54 @@
 {% block active_asset_list %}active{% endblock %}
 
 {% block contents %}
-<div class="container my-5">
-    <div class="row">
-        <div class="col-3 col-lg-2">
-            <strong>管理名</strong>
-        </div>
-        <div class="col-9 col-lg-10">
-            {{ object.asset_name }}
-        </div>
+<section class="py-5 px-4 px-sm-0">
+    <div class="text-center mb-3">
+        <h2>管理項目詳細</h2>
     </div>
-    
-    <hr>
-    
-    <div class="row row-cols-1 row-cols-md-2 mb-3">
-        <div class="col col-md-9">
-            <div class="mb-3"><strong>写真</strong></div>
-            {% for image in image_list %}
-                {% if image.image %}
-                    <img src="{{ image.image.url }}" width="100%" height="auto"/>
-                {% endif %}
-            {% endfor %}
-        </div>
-        <div class="col-auto w-auto mt-5 mt-md-0">
-            <div class="mb-3"><strong>アイテム一覧</strong></div>
-            <div class="mb-4">
-                <div class="w-auto">
-                    {% for item in item_list %}
-                        <span class="d-inline-block d-md-block mb-2 mx-2 ">{{ forloop.counter }}. {{ item.item_name }}</span>
-                    {% endfor %}
-                </div>
+
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-3 col-lg-2">
+                <strong>管理名</strong>
             </div>
-            <a class="btn btn-3" href="{% url 'toolkeeper_app:check_image_add' asset_id %}"> チェックする</a>
+            <div class="col-9 col-lg-10">
+                {{ object.asset_name }}
+            </div>
         </div>
+        
+        <hr>
+        
+        <div class="row row-cols-1 row-cols-md-2 pb-3">
+            <div class="col col-md-8">
+                <div class="mb-3"><strong>写真</strong></div>
+                {% for image in image_list %}
+                    {% if image.image %}
+                        <img src="{{ image.image.url }}" width="100%" height="auto"/>
+                    {% endif %}
+                {% endfor %}
+
+                <hr class="d-md-none">
+            </div>
+
+            <div class="col w-auto">
+                <div class="mb-3"><strong>アイテム一覧</strong></div>
+                <div class="mb-4 px-2 px-md-0">
+                    <div class="w-auto">
+                        {% for item in item_list %}
+                            <u class="d-inline-block d-md-block mb-2 mx-2">
+                                {{ forloop.counter }}.　{{ item.item_name }}<strong></strong>
+                            </u>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <a class="btn btn-3" href="{% url 'toolkeeper_app:check_image_add' asset_id %}"> チェックする</a>
+            </div>
+        </div>
+
+        <hr>
+
+        <a class="btn btn-3 float-right" href="{% url 'toolkeeper_app:asset_list' %}">管理項目一覧に戻る</a>    
     </div>
-</div>
+</section>
 {% endblock %}
