--- a/Django_Docker/toolkeeper_app/templates/common_history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_add.html
@@ -1,15 +1,15 @@
 {% for item in items reversed %}
-<div class="row justify-content-between mt-auto mx-auto" id="ctrl_{{ forloop.counter0 }}">
+<div class="row justify-content-between mx-auto" id="ctrl_{{ forloop.counter0 }}">
     {% include 'common_history_check_list.html' %}
 
-    <div class="my-check col-12 col-lg-6 my-lg-3 mt-3 ps-md-0">
+    <div class="my-check col-12 col-lg-6 my-lg-3 mt-3 ps-md-0 d-flex align-items-end">
         <input class="btn-check" type="checkbox" id="check_{{ forloop.counter0 }}" name="check" disabled>
         <label class="btn my-btn-common my-check-green w-100" for="check_{{ forloop.counter0 }}" onclick="check_box('{{ forloop.counter0 }}');">
             <span name="checked">チェック</span>
         </label>
     </div>
     
-    <div class="my-check col-12 col-lg-6 my-3 ps-md-0">
+    <div class="my-check col-12 col-lg-6 my-3 mt-2 mt-md-3 ps-md-0 d-flex align-items-end">
         <input class="btn-check" type="checkbox" id="box_{{ forloop.counter0 }}" name="box" disabled>
         <label class="btn my-btn-common my-check-red w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
     </div>
