--- a/Django_Docker/toolkeeper_app/templates/common_history_create_js.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_create_js.html
@@ -31,14 +31,11 @@
     const x_fix = box_x_max - box_x_min;
     const y_fix = box_y_max - box_y_min;
 
-    // canvas.width = x_fix;
-    // canvas.height = y_fix;
+    canvas.width = x_fix;
+    canvas.height = y_fix;
 
-    // let x_fit = canvas.width / x_fix;
-    // let y_fit = canvas.height / y_fix;
-
-    // let x_min_fit = box_x_min;
-    // let y_min_fit = box_y_min;
+    let x_fit = canvas.width / x_fix;
+    let y_fit = canvas.height / y_fix;
 
 
     // バウンディングボックスの座標を初期化
@@ -70,50 +67,34 @@
             var max_h = canvas.height;
             switch_width.style.width = "auto";
             check_list.style.marginTop = "auto";
-            // for (let i = 0; i < set.length; i++) {
-            //     document.getElementById(`ctrl_${i}`).style.margin = "auto";
-            // }
-        }
-        else {
+        } else {
             var max_h = 145;
             switch_width.style.width = 200 * set.length;
             check_list.style.marginTop = "20px";
-            // for (let i = 0; i < set.length; i++) {
-            //     document.getElementById(`ctrl_${i}`).style.margin = "0 2px";
-            // }
         }
         check_list.style.height = max_h;
 
         for (let i = 0; i < set.length; i++) {
-            // console.log(window.innerWidth);
-            // console.log(document.getElementById(`ctrl_${i}`).style.width);
         }
     };
 
 
     function auto_fit() {
         if (canvas.width != preview.getBoundingClientRect().width.toFixed()) {
-            console.log("tttt");
-
-            for (let i = 0; i < set.length; i++) {
-                box_li[i][0] *= preview.getBoundingClientRect().width / canvas.width;
-                box_li[i][1] *= preview.getBoundingClientRect().height / canvas.height;
-                box_li[i][2] *= preview.getBoundingClientRect().width / canvas.width;
-                box_li[i][3] *= preview.getBoundingClientRect().height / canvas.height;
-                console.log(box_li[i]);
-            }
-
             canvas.width = preview.getBoundingClientRect().width.toFixed();
             canvas.height = canvas.width * (y_fix / x_fix);
 
-            // x_fit = canvas.width / x_fix;
-            // y_fit = canvas.height / y_fix;
+            x_fit = canvas.width / x_fix;
+            y_fit = canvas.height / y_fix;
 
-            // x_min_fit = box_x_min * x_fit;
-            // y_min_fit = box_y_min * y_fit;
-            
-            
-            // ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, x_min_fit, y_min_fit, canvas.width, canvas.height,);
+            for (let i = 0; i < set.length; i++) {
+                box_li[i][0] *= x_fit;
+                box_li[i][1] *= y_fit;
+                box_li[i][2] *= x_fit;
+                box_li[i][3] *= y_fit;
+                console.log(box_li[i]);
+            }
+
             ctx.drawImage(image, 0, 0, image.width, image.height, 0, 0, canvas.width, canvas.height);
         }
         
@@ -123,10 +104,6 @@
         console.log(`preview.height: ${preview.getBoundingClientRect().height} px`);
         console.log(`canvas.width  : ${canvas.width} px`);
         console.log(`canvas.height : ${canvas.height} px`);
-        // console.log(`x_min_fit     : ${x_min_fit.toFixed()} px`);
-        // console.log(`y_min_fit     : ${y_min_fit.toFixed()} px`);
-        // console.log(`x_max_fit     : ${(x_min_fit + canvas.width).toFixed()} px`);
-        // console.log(`y_max_fit     : ${(y_min_fit + canvas.height).toFixed()} px`);
         console.log(`image.width   : ${(image.width).toFixed()} px`);
         console.log(`image.height  : ${(image.height).toFixed()} px`);
     };
@@ -172,19 +149,12 @@
         // キャンバスをクリアして画像を再描画
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         ctx.drawImage(image, 0, 0, image.width, image.height, 0, 0, canvas.width, canvas.height);
-        // ctx.drawImage(image, 0, 0);
-        // ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, 0, 0, canvas.width, canvas.height,);
         
         for (let i = 0; i < set.length; i++) {
             if (i == order) ctx.lineWidth = 5;
             else ctx.lineWidth = 1;
             
-            // 緑色の線で描画
-            ctx.strokeStyle = `rgb(
-                0,
-                220,
-                50
-            )`;
+            ctx.strokeStyle = `rgb(0, 220, 50)`; // 緑色の線で描画
             if (order == -2) ctx.lineWidth = 3;
 
             ctx.strokeRect(
@@ -199,23 +169,10 @@
 
     // 画像の読み込みが完了したらキャンバスに描画
     image.onload = () => {
-
-        // const x_fix = image.width;
-        // const y_fix = image.height;
-
-        // canvas.width = preview.getBoundingClientRect().width.toFixed();
-        // canvas.height = canvas.width * (y_fix / x_fix);
         canvas.width = image.width;
         canvas.height = image.height;
 
-        // let x_fit = canvas.width / x_fix;
-        // let y_fit = canvas.height / y_fix;
-
-        // let x_min_fit = box_x_min * x_fit;
-        // let y_min_fit = box_y_min * y_fit;
-
         auto_fit();
-
         draw_box();
     };
 
@@ -334,8 +291,23 @@
     };
 
 
-    // bootstrapでのデフォルトのブレークポイントで発
-    function transition_class () {
+    const width_xxl = 1400;
+    const width_xl = 1200;
+    const width_lg = 992;
+    const width_md = 768;
+    const width_sm = 576;
+
+    let width_class = window.innerWidth;
+
+    // ウィンドウのリサイズ時にスクロール状態を切り替える
+    window.onresize = () => {
+        if (width_class != width_xxl && window.innerWidth >= width_xxl) width_class = width_xxl;
+        else if (width_class != width_xl && window.innerWidth < width_xxl && window.innerWidth >= width_xl) width_class = width_xl;
+        else if (width_class != width_lg && window.innerWidth < width_xl && window.innerWidth >= width_lg) width_class = width_lg;
+        else if (width_class != width_md && window.innerWidth < width_lg && window.innerWidth >= width_md) width_class = width_md;
+        else if (width_class != width_sm && window.innerWidth < width_md) width_class = width_sm;
+        else return;
+
         auto_fit();
         draw_box();
     };
