--- a/Django_Docker/toolkeeper_app/templates/common_history_add_js.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_add_js.html
@@ -43,12 +43,6 @@
     canvas.width = x_fix;
     canvas.height = y_fix;
 
-    // let x_fit = canvas.width / x_fix;
-    // let y_fit = canvas.height / y_fix;
-
-    // let x_min_fit = box_x_min;
-    // let y_min_fit = box_y_min;
-
 
     // バウンディングボックスの座標を初期化
     let item_name = [];
@@ -105,65 +99,29 @@
             var max_h = canvas.height - check_ctrl.getBoundingClientRect().height - 16;;
             switch_width.style.width = "auto";
             check_list.style.marginTop = "auto";
-            // for (let i = 0; i < set.length; i++) {
-            //     document.getElementById(`ctrl_${i}`).style.margin = "auto";
-            // }
-        }
-        else {
+        } else {
             var max_h = 200;
             switch_width.style.width = 200 * set.length;
             check_list.style.marginTop = "20px";
-            // for (let i = 0; i < set.length; i++) {
-            //     document.getElementById(`ctrl_${i}`).style.margin = "auto";
-            // }
         }
         check_list.style.height = max_h;
-
-        // for (let i = 0; i < set.length; i++) {
-        //     console.log(window.innerWidth);
-        //     console.log(document.getElementById(`ctrl_${i}`).style.width);
-        // }
     };
 
     function auto_fit() {
         if (canvas.width != preview.getBoundingClientRect().width.toFixed()) {
-            console.log("tttt");
-            
-            // console.log(`preview.width :  ${preview.getBoundingClientRect().width} px`);
-            // console.log(`preview.height: ${preview.getBoundingClientRect().height} px`);
-            // console.log(`canvas.width  :  ${canvas.width} px`);
-            // console.log(`canvas.height : ${canvas.height} px`);
-            // console.log(`x_min_fit: ${x_min_fit.toFixed()} px`);
-            // console.log(`y_min_fit: ${y_min_fit.toFixed()} px`);
-            // console.log(`x_max_fit: ${(x_min_fit + canvas.width).toFixed()} px`);
-            // console.log(`y_max_fit: ${(y_min_fit + canvas.height).toFixed()} px`);
-            // console.log(`width         :  ${(preview.getBoundingClientRect().width / canvas.width)} px`);
-            // console.log(`height        : ${(preview.getBoundingClientRect().height / canvas.height)} px`);
-
-            for (let i = 0; i < set.length; i++) {
-                // console.log("b "+box_li[i]);
-                // box_li[i][0] = ((box_li[i][0]) * (preview.getBoundingClientRect().width / canvas.width))-50;
-                // box_li[i][1] = ((box_li[i][1]) * (preview.getBoundingClientRect().height / canvas.height))-50;
-                // box_li[i][2] = ((box_li[i][2] + box_x_min) * (preview.getBoundingClientRect().width / canvas.width))-50;
-                // box_li[i][3] = ((box_li[i][3] + box_y_min) * (preview.getBoundingClientRect().height / canvas.height))-50;
-                box_li[i][0] *= (preview.getBoundingClientRect().width / canvas.width);
-                box_li[i][1] *= (preview.getBoundingClientRect().height / canvas.height);
-                box_li[i][2] *= (preview.getBoundingClientRect().width / canvas.width);
-                box_li[i][3] *= (preview.getBoundingClientRect().height / canvas.height);
-                // console.log("a "+box_li[i]);
-            }
-
             canvas.width = preview.getBoundingClientRect().width.toFixed();
             canvas.height = canvas.width * (y_fix / x_fix);
 
             x_fit = canvas.width / x_fix;
             y_fit = canvas.height / y_fix;
 
-            // x_min_fit = box_x_min * x_fit;
-            // y_min_fit = box_y_min * y_fit;
-            
-            // check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height - 16};`;
-            // ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, x_min_fit, y_min_fit, canvas.width, canvas.height,);
+            for (let i = 0; i < set.length; i++) {
+                box_li[i][0] *= x_fit;
+                box_li[i][1] *= y_fit;
+                box_li[i][2] *= x_fit;
+                box_li[i][3] *= y_fit;
+            }
+
             ctx.drawImage(image, 0, 0, image.width, image.height, 0, 0, canvas.width, canvas.height);
         }
 
@@ -173,11 +131,6 @@
         console.log(`preview.height: ${preview.getBoundingClientRect().height} px`);
         console.log(`canvas.width:  ${canvas.width} px`);
         console.log(`canvas.height: ${canvas.height} px`);
-        // console.log(`x_min_fit: ${x_min_fit.toFixed()} px`);
-        // console.log(`y_min_fit: ${y_min_fit.toFixed()} px`);
-        // console.log(`x_max_fit: ${(x_min_fit + canvas.width).toFixed()} px`);
-        // console.log(`y_max_fit: ${(y_min_fit + canvas.height).toFixed()} px`);
-        
     };
 
 
@@ -223,7 +176,6 @@
         // キャンバスをクリアして画像を再描画
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         ctx.drawImage(image, 0, 0, image.width, image.height, 0, 0, canvas.width, canvas.height);
-        // ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, 0, 0, canvas.width, canvas.height,);
         
         for (let i = 0; i < set.length; i++) {
             if (i == order) ctx.lineWidth = 5;
@@ -234,12 +186,7 @@
             else ctx.strokeStyle = "red"; // 赤い線で描画
 
             if (checked[i].innerText == "チェック済み") {
-                 // 緑色の線で描画
-                ctx.strokeStyle = `rgb(
-                    0,
-                    220,
-                    50
-                )`;
+                ctx.strokeStyle = `rgb(0, 220, 50)`; // 緑色の線で描画
                 if (order == -2) ctx.lineWidth = 3;
             }
 
@@ -256,19 +203,11 @@
     // 画像の読み込みが完了したらキャンバスに描画
     image.onload = () => {
 
-        // const x_fix = box_x_max - box_x_min;
-        // const y_fix = box_y_max - box_y_min;
-
         canvas.width = image.width;
         canvas.height = image.height;
 
         let x_fit = canvas.width / x_fix;
         let y_fit = canvas.height / y_fix;
-
-        // let x_min_fit = box_x_min * x_fit;
-        // let y_min_fit = box_y_min * y_fit;
-
-        // check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height - 16};`;
 
         for (let i = 0; i < set.length; i++) {
             if (item_box >= 2 && document.getElementById(`item_${i+1}_x_min`).innerText != "None") {
@@ -465,8 +404,23 @@
     };
 
     
-    // bootstrapでのデフォルトのブレークポイントで発
-    function transition_class () {
+    const width_xxl = 1400;
+    const width_xl = 1200;
+    const width_lg = 992;
+    const width_md = 768;
+    const width_sm = 576;
+
+    let width_class = window.innerWidth;
+
+    // ウィンドウのリサイズ時にスクロール状態を切り替える
+    window.onresize = () => {
+        if (width_class != width_xxl && window.innerWidth >= width_xxl) width_class = width_xxl;
+        else if (width_class != width_xl && window.innerWidth < width_xxl && window.innerWidth >= width_xl) width_class = width_xl;
+        else if (width_class != width_lg && window.innerWidth < width_xl && window.innerWidth >= width_lg) width_class = width_lg;
+        else if (width_class != width_md && window.innerWidth < width_lg && window.innerWidth >= width_md) width_class = width_md;
+        else if (width_class != width_sm && window.innerWidth < width_md) width_class = width_sm;
+        else return;
+
         auto_fit();
         draw_box();
     };
