--- a/Django_Docker/toolkeeper_app/templates/history_list.html
+++ b/Django_Docker/toolkeeper_app/templates/history_list.html
@@ -39,9 +39,11 @@
             
         </form>
 
-        <button class="btn btn-danger">
-            <a class="nav-link" href="{% url 'toolkeeper_app:history_list2' %}">異常な履歴一覧</a>
-        </button>
+        {% if abnormal_history_list %}
+            <button class="btn btn-danger">
+                <a class="nav-link" href="{% url 'toolkeeper_app:history_list2' %}">異常な管理項目</a>
+            </button>
+        {% endif %}
 
         <hr>
 
@@ -57,16 +59,15 @@
                         <div class="card">
                             <!--badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem; font-size: 13px;">{{ history.group.group_name }}</div>
+                            {% if history in abnormal_history_list %}
                             <div class="badge bg-dark text-danger position-absolute" style="top: 0.5rem; left: 0.5rem; font-size: 20px;"><i class="bi bi-exclamation-circle"></i></div>
-                            <!-- Product image-->
-                            {% if history.image.image %}
-                                <img class="card-img-top" src="{{ history.image.image.url }}" alt="..." />
                             {% endif %}
                             <!-- Product details-->
                             <div class="card-body">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">{{ history.asset.asset_name }}</h5>
+                                    <h5 class="fw-bolder {% if history in abnormal_history_list %}text-danger{% endif %}">{{ history.asset.asset_name }}</h5>
+                                    <hr>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small mb-2">
                                         確認日時：{{ history.checked_at }}
