--- a/Django_Docker/toolkeeper_app/templates/image_add.html
+++ b/Django_Docker/toolkeeper_app/templates/image_add.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="my-check row w-50 mt-4 mb-5 mx-auto" id="control" style="display: none;">
-        <input class="btn-check" type="checkbox" id="check" disabled>
+        <input class="btn-check d-none" type="checkbox" id="check" disabled>
         <label class="btn my-btn-common my-check-red" for="check" onclick="del_box(); auto_fit();">外枠をリセット</label>
     </div>
     
