--- a/Django_Docker/toolkeeper_app/templates/group_detail.html
+++ b/Django_Docker/toolkeeper_app/templates/group_detail.html
@@ -71,21 +71,28 @@
                 </div>
             </div>
         </div>
-        {% if group.user == request.user %}
-            <form method="post">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-lg btn-danger" name="delete_group">グループ削除</button>
+        {% if not group.private %}
+        <div class="row row-cols-auto row-cols-sm-2 justify-content-center justify-content-md-start">
+            {% if group.user == request.user %}
+                <form method="post" class="col col-md-3 mb-3">
+                    {% csrf_token %}
+                    <button type="submit" class="w-100 px-5 px-sm-0 btn btn-lg btn-danger" name="delete_group">グループ削除</button>
+                </form>
                 {% if members_count > 1 %}
-                    <button class="btn btn-lg btn-success">
+                <div class="col col-md-3 mb-3">
+                    <button class="w-100 px-5 px-sm-0 btn btn-lg btn-success">
                         <a class="nav-link" href="{% url 'toolkeeper_app:group_host' group.id %}">ホストを変更</a>
                     </button>
+                </div>
                 {% endif %}
-            </form>
-        {% endif %}
-        {% if group.user != request.user %}
-            <button class="btn btn-lg btn-danger mb-3">
-                <a class="nav-link" href="{% url 'toolkeeper_app:group_leave' group.id %}">グループを退会</a>
-            </button>
+            {% else %}
+                <div class="col col-sm-6 col-md-3 mb-3">
+                    <button class="w-100 btn btn-lg btn-danger mb-3">
+                        <a class="nav-link" href="{% url 'toolkeeper_app:group_leave' group.id %}">グループを退会</a>
+                    </button>
+                </div>
+            {% endif %}            
+        </div>
         {% endif %}
         <div class="d-grid">
             <button class="btn btn-lg btn-2 d-grid">
