--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -9,7 +9,7 @@
 <div class="container my-5">
     <div class="row justify-content-around mt-4" style="text-align: center;">
         <h3 class="col-12 col-md-8" style="text-align: center; margin-top: 0.5rem;">登録したアイテムを<span class="d-inline-block d-md-inline">全て囲ってください。</span></h3>
-        <button class="col-6 col-md-2 btn btn-3 my-2 my-md-auto" type="button" onclick="auto_fit(); draw_box()">画像読込</button>
+        <button class="col-6 col-md-2 btn btn-3 my-2 my-md-auto" type="button" onclick="auto_fit(); draw_box();">画像読込</button>
     </div>
     
     <hr>
