--- a/Django_Docker/toolkeeper_app/templates/history_list2.html
+++ b/Django_Docker/toolkeeper_app/templates/history_list2.html
@@ -7,16 +7,26 @@
 {% block contents %}
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-3">
-        <div class="row mb-4">
-            <h2 class="col-auto my-auto">異常な管理項目</h2>
-            <button class="col-auto ms-auto learn-more">
-                <span class="circle" aria-hidden="true">
-                  <span class="icon arrow"></span>
-                </span>
-                <span class="col-auto button-text ps-2">
-                    <a class="nav-link" href="{% url 'toolkeeper_app:asset_list' %}">管理項目一覧</a>
-                </span>
-            </button>
+        <div class="row row-cols-1 row-cols-md-2 justify-content-center justify-content-md-between d-flex mb-4">
+            <h2 class="col w-auto mb-4 my-md-auto">異常な履歴一覧</h2>
+            <div class="col row justify-content-center w-auto mx-auto mx-md-0 ms-md-auto">
+                <button class="col-auto learn-more my-2">
+                    <span class="circle" aria-hidden="true">
+                    <span class="icon arrow"></span>
+                    </span>
+                    <span class="col-auto button-text ps-2">
+                        <a class="nav-link" href="{% url 'toolkeeper_app:asset_list' %}">管理項目一覧</a>
+                    </span>
+                </button>
+                <button class="col-auto learn-more my-2">
+                    <span class="circle" aria-hidden="true">
+                    <span class="icon arrow"></span>
+                    </span>
+                    <span class="col-auto button-text ps-2">
+                        <a class="nav-link" href="{% url 'toolkeeper_app:history_list' %}">履歴一覧</a>
+                    </span>
+                </button>
+            </div>
         </div>
         <form method="get">
             <div class="mb-3">
@@ -37,10 +47,6 @@
                 <button type="submit" class="btn btn-3">絞り込みとソート</button>
             </div>
         </form>
-
-        <button class="btn btn-3">
-            <a class="nav-link" href="{% url 'toolkeeper_app:history_list' %}">履歴一覧</a>
-        </button>
         
         <hr>
 
